--- a/locations.html
+++ b/locations.html
@@ -28,10 +28,10 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="links" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="links" href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="links" href="locations.html">Locations</a>
+        <a class="links" href="locations.html">Locations<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="links" href="sign-up.html">Sign Up</a>
@@ -40,26 +40,18 @@
   </div>
 </nav>
 </header>
-<!---------------------------------------------------------------------------------Welcome with pic-->
+<!---------------------------------------------------------------------------------Locations-->
 <section>
-    Hero Image
+    Locations
     
 </section>
-<!---------------------------------------------------------------------------------Memberships-->
+<!---------------------------------------------------------------------------------Facilities-->
 <section>
-    Memberships
-</section>
-<!---------------------------------------------------------------------------------Why join us-->
-<section>
-    Why Join Us
-</section>
-<!---------------------------------------------------------------------------------Trust Pilot-->
-<section>
-    Trust Pilot
+    Facilities
 </section>
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
-<ul class="social-networks">
+    <ul class="social-networks">
         <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></i></a></li>
         <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
