--- a/sign-up.html
+++ b/sign-up.html
@@ -28,34 +28,26 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="links" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="links" href="index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="links" href="locations.html">Locations</a>
       </li>
       <li class="nav-item">
-        <a class="links" href="sign-up.html">Sign Up</a>
+        <a class="links" href="sign-up.html">Sign Up<span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
 </nav>
 </header>
-<!---------------------------------------------------------------------------------Welcome with pic-->
+<!---------------------------------------------------------------------------------Form-->
 <section>
-    Hero Image
+    Sign Up form
     
 </section>
-<!---------------------------------------------------------------------------------Memberships-->
+<!---------------------------------------------------------------------------------Other-->
 <section>
-    Memberships
-</section>
-<!---------------------------------------------------------------------------------Why join us-->
-<section>
-    Why Join Us
-</section>
-<!---------------------------------------------------------------------------------Trust Pilot-->
-<section>
-    Trust Pilot
+    Other enquiries
 </section>
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
