--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <a class="links" href="index.html"><h1>GYM CITY</h1></a>
     </div>
     <div id="login">
-        <a class="links" href="sign-up.html"><h3>Join Us</h3></a>
+        <a class="links" href="sign-up.html"><h3><i class="fas fa-user-plus"></i> Join Us</h3></a>
     </div>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
+  <div class="links-hover collapse navbar-collapse" id="navbarTogglerDemo01">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
+      <li class="nav-item">
         <a class="links" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
