Added Welcome Image

--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
 </header>
 <!---------------------------------------------------------------------------------Welcome with pic-->
 <section>
-    Hero Image
-    
+    <div class="hero"></div>
+      <div id="cover">
+      <h2>Welcome To</h2>
+      <h1>GYM CITY</h1>
+      <h3>DARE TO BE GREAT</h3>
+      </div>
+
+
+
 </section>
 <!---------------------------------------------------------------------------------Memberships-->
 <section>
