--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">TEXT</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
+                                    <h4 class="card-title">FEATURES</h4>
+                                    <ul class="card-text">
+                                        <li>24/7 access</li>
+                                        <li>Use up to 2 of our facilities</li>
+                                        <li>2 free PT sessions a month</li>
+                                        <li>Access to any of our classes</li>
+                                        <h1>£25 p/m</h1>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -98,8 +104,14 @@
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
+                                    <h4 class="card-title">FEATURES</h4>
+                                    <ul class="card-text">
+                                        <li>24/7 access</li>
+                                        <li>Use any of our facilities</li>
+                                        <li>5 free PT sessions a month</li>
+                                        <li>Access to any of our classes</li>
+                                        <h1>£35 p/m</h1>
+                                    </ul>
 
                                 </div>
                             </div>
@@ -122,8 +134,14 @@
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
+                                    <h4 class="card-title">FEATURES</h4>
+                                    <ul class="card-text">
+                                        <li>Off-Peak access</li>
+                                        <li>Use one of our facilities</li>
+                                        <li>1 free PT sessions a month</li>
+                                        <li>Access to any of our classes</li>
+                                        <h1>£20 p/m</h1>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -147,7 +165,7 @@
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
 <ul class="social-networks">
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
         <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
         <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
