Completed home page for desktop and added gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -34,28 +34,28 @@
         <a class="links" href="locations.html">Locations</a>
       </li>
       <li class="nav-item">
-        <a class="links" href="gallery.html">Gallery</a>
+        <a class="links" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="links" href="sign-up.html">Sign Up<span class="sr-only">(current)</span></a>
+        <a class="links" href="sign-up.html">Sign Up</a>
       </li>
     </ul>
   </div>
 </nav>
 </header>
-<!---------------------------------------------------------------------------------Form-->
+<!---------------------------------------------------------------------------------Locations-->
 <section>
-    Sign Up form
+    Locations
     
 </section>
-<!---------------------------------------------------------------------------------Other-->
+<!---------------------------------------------------------------------------------Facilities-->
 <section>
-    Other enquiries
+    Facilities
 </section>
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
-<ul class="social-networks">
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></i></a></li>
+    <ul class="social-networks">
+        <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
         <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
         <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
