--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <a class="links" href="locations.html">Locations</a>
       </li>
       <li class="nav-item">
+        <a class="links" href="gallery.html">Gallery</a>
+      </li>
+      <li class="nav-item">
         <a class="links" href="sign-up.html">Sign Up</a>
       </li>
     </ul>
@@ -54,12 +57,61 @@
 
 
 </section>
+<!---------------------------------------------------------------------------------Why join us-->
+<section class="offer-you">
+    <h1 class="text-center">WHAT WE OFFER YOU</h1>
+    <p class="text-center">
+    We offer you access to our modern smart facilities, our gyms provide you with professionally certified PTs, at least 50 different pieces of equipment to be used in each gym,<br>
+    a range of facilities including saunas, swimming pools, private rooms and even a spa. Most importantly we provide you with a safe and secure environment to exercise in, <br>
+    together we can achieve your fitness goals.
+    </p>
+</section>
+
+<!---------------------------------------------------------------------------------Our Team-->
+<section class="our-team">
+    <div class="container">
+        <div class="title">
+            <h1>OUR TEAM</h1>
+            <p>Meet our managers that will be helping you out in your gyms!</p>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card text-center">
+                    <img src="assets/images/ptw.jpg" class="card img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Emily James</h5>
+                        <p class="card-text"> "Hey there! I run the Manchester GYM CITY, I've been in the business for 10 years now and counting! You can always find me on the gym floor leading classes and helping our members achieve their fitness goals. See you there!'"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-center">
+                    <img src="assets/images/pt.jpg" class="card img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Mark Hughes</h5>
+                        <p class="card-text"> "Hey! I'm Mark, manager and pt at our London GYM CITY, I specialise in cardio workouts and as an ex professional 800m runner, I know all there is about HIIT training and getting your running time down!"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card text-center">
+                    <img src="assets/images/pt2.jpg" class="card img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Alberto Manuel</h5>
+                        <p class="card-text"> "Hola! I help to lead the Newcastle Gym City, We have an amazing environment here where everyone feels comfortable to workout, after years of learning and training I specify in packing on the muscle so if you need any tips and tricks come find me in Newcastle!"</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</section>
 <!---------------------------------------------------------------------------------Memberships-->
-<section id="team" class="pb-5">
+<section id="membership" class="pb-5">
     <div class="container">
         <h5 class="section-title h1">OUR MEMBERSHIPS</h5>
         <div class="row">
-            <!-- Team member -->
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
                     <div class="mainflip">
@@ -154,13 +206,59 @@
     </div>
 </section>
 <!-- Team -->
-<!---------------------------------------------------------------------------------Why join us-->
-<section>
-    Why Join Us
+<!---------------------------------------------------------------------------------Reviews-->
+<section id="reviews">
+    <div class="container mt-5">
+    <div class="card">
+        <div class="row no-gutters">
+            <div class="col-md-4 border-right">
+                <div class="ratings text-center p-4 py-5"> <span class="badge ">4.1 <i class="fa fa-star-o"></i></span> <span class="d-block about-rating">VERY GOOD</span> <span class="d-block total-ratings">183 ratings</span> </div>
+            </div>
+            <div class="col-md-8">
+                <div class="rating-progress-bars p-3 mt-2">
+                    <div class="d-flex align-items-center"> <span class="stars"> <span>5 <i class="fa fa-star text-success"></i></span> </span>
+                        <div class="col px-2">
+                            <div class="progress" style="height: 5px;">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div> <span class="percent"> <span>60%</span> </span>
+                    </div>
+                    <div class="d-flex align-items-center"> <span class="stars"> <span>4 <i class="fa fa-star text-custom"></i></span> </span>
+                        <div class="col px-2">
+                            <div class="progress" style="height: 5px;">
+                                <div class="progress-bar bg-custom" role="progressbar" style="width: 20%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div> <span class="percent"> <span>15%</span> </span>
+                    </div>
+                    <div class="d-flex align-items-center"> <span class="stars"> <span>3 <i class="fa fa-star text-primary"></i></span> </span>
+                        <div class="col px-2">
+                            <div class="progress" style="height: 5px;">
+                                <div class="progress-bar bg-primary" role="progressbar" style="width: 12%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div> <span class="percent"> <span>12%</span> </span>
+                    </div>
+                    <div class="d-flex align-items-center"> <span class="stars"> <span>2 <i class="fa fa-star text-warning"></i></span> </span>
+                        <div class="col px-2">
+                            <div class="progress" style="height: 5px;">
+                                <div class="progress-bar bg-warning" role="progressbar" style="width: 8%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div> <span class="percent"> <span>8%</span> </span>
+                    </div>
+                    <div class="d-flex align-items-center"> <span class="stars"> <span>1 <i class="fa fa-star text-danger"></i></span> </span>
+                        <div class="col px-2">
+                            <div class="progress" style="height: 5px;">
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 5%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div> <span class="percent"> <span>5%</span> </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
-<!---------------------------------------------------------------------------------Trust Pilot-->
 <section>
-    Trust Pilot
+
 </section>
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
