--- a/locations.html
+++ b/locations.html
@@ -34,6 +34,9 @@
         <a class="links" href="locations.html">Locations<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+        <a class="links" href="gallery.html">Gallery</a>
+      </li>
+      <li class="nav-item">
         <a class="links" href="sign-up.html">Sign Up</a>
       </li>
     </ul>
