--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 </section>
 <!---------------------------------------------------------------------------------Memberships-->
-<section id="membership" class="pb-5">
+<section id="membership">
     <div class="container">
         <h5 class="section-title h1">OUR MEMBERSHIPS</h5>
         <div class="row">
