--- a/index.html
+++ b/index.html
@@ -131,25 +131,21 @@
                                         <li>Use up to 2 of our facilities</li>
                                         <li>2 free PT sessions a month</li>
                                         <li>Access to any of our classes</li>
-                                        <h1>£25 p/m</h1>
+                                        <a href="sign-up.html"><button type="button" class="btn btn-info">£25</button></a>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>  
             </div>
-            <!-- ./Team member -->
-            <!-- Team member -->
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
                     <div class="mainflip">
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <!--<p><img class=" img-fluid" src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/13BAC/production/_113321808_gymgroup.jpg" alt="card image"></p>-->
                                     <h4 class="card-title">PREMIUM</h4>
-                                    <!--<a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>-->
                                 </div>
                             </div>
                         </div>
@@ -162,7 +158,7 @@
                                         <li>Use any of our facilities</li>
                                         <li>5 free PT sessions a month</li>
                                         <li>Access to any of our classes</li>
-                                        <h1>£35 p/m</h1>
+                                        <a href="sign-up.html"><button type="button" class="btn btn-info">£35</button></a>
                                     </ul>
 
                                 </div>
@@ -171,8 +167,6 @@
                     </div>
                 </div>
             </div>
-            <!-- ./Team member -->
-            <!-- Team member -->
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
                     <div class="mainflip">
@@ -192,7 +186,7 @@
                                         <li>Use one of our facilities</li>
                                         <li>1 free PT sessions a month</li>
                                         <li>Access to any of our classes</li>
-                                        <h1>£20 p/m</h1>
+                                        <a href="sign-up.html"><button type="button" class="btn btn-info">£20</button></a>
                                     </ul>
                                 </div>
                             </div>
@@ -200,10 +194,51 @@
                     </div>
                 </div>
             </div>
-            <!-- ./Team member -->
+
 
         </div>
     </div>
+</section>
+
+<!--------------------------------------Mobile Membership Cards-->
+<section id="mobile-member">
+<div class="container">
+<div class="boxed">
+  <h1>Premium</h1>
+    <ul class="mob-card-text">
+        <li>24/7 access</li>
+        <li>Use any of our facilities</li>
+        <li>5 free PT sessions a month</li>
+        <li>Access to any of our classes</li>
+    </ul>
+    <a href="sign-up.html"><button type="button" class="btn btn-info">£35</button></a>
+
+</div>
+<div class="boxed">
+  <h1>Standard</h1>
+    <ul class="mob-card-text">
+        <li>24/7 access</li>
+        <li>Use up to 2 of our facilities</li>
+        <li>2 free PT sessions a month</li>
+        <li>Access to any of our classes</li>
+    </ul>
+    <a href="sign-up.html"><button type="button" class="btn btn-info">£25</button></a>
+
+</div>
+<div class="boxed">
+  <h1>Student</h1>
+    <ul class="mob-card-text">
+        <li>Off-Peak access</li>
+        <li>Use one of our facilities</li>
+        <li>1 free PT sessions a month</li>
+        <li>Access to any of our classes</li>
+    </ul>
+    <a href="sign-up.html"><button type="button" class="btn btn-info">£20</button></a>
+
+</div>
+</div>
+
+   
 </section>
 <!-- Team -->
 <!---------------------------------------------------------------------------------Reviews-->
