--- a/locations.html
+++ b/locations.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <link href="css/hover.css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
@@ -44,13 +45,60 @@
 </nav>
 </header>
 <!---------------------------------------------------------------------------------Locations-->
-<section>
-    Locations
-    
+<section id="loc-section">
+    <div class="row no-gutters">
+        <div class="col-md-4">
+            <div class="newcastle"></div>
+            <div class="loc-cover">
+            <h1>NEWCASTLE</h1>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="london"></div>
+            <div class="loc-cover">
+            <h1>LONDON</h1>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="manchester"></div>
+            <div class="loc-cover">
+            <h1>MANCHESTER</h1>
+            </div>
+        </div>
+
+    </div>
+
+
 </section>
 <!---------------------------------------------------------------------------------Facilities-->
 <section>
-    Facilities
+    <h1>Facilities</h1>
+</section>
+<!---------------------------------------------------------------------------------Location Maps-->
+<section>
+<div class="row">
+    <div class="col-md-6 text-pad"> 
+        <h1>GYM CITY - </h1><h2>LONDON</h2>
+    </div>
+    <div class="col-md-6 map-pad">
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
+    </div>
+    <div class="col-md-6 text-pad"> 
+        <h1>GYM CITY - </h1><h2>NEWCASTLE</h2>
+    </div>
+    <div class="col-md-6 map-pad">
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
+</div>
+    <div class="col-md-6 text-pad"> 
+            <h1>GYM CITY - </h1><h2>MANCHESTER</h2>
+        </div>
+        <div class="col-md-6 map-pad">
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
+        </div>
+    </div>
+
 </section>
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
