--- a/locations.html
+++ b/locations.html
@@ -46,9 +46,12 @@
 </header>
 <!---------------------------------------------------------------------------------Locations-->
 <section id="loc-section">
+    <div class="conatiner">
     <div class="row no-gutters">
         <div class="col-md-4">
+
             <div class="newcastle"></div>
+
             <div class="loc-cover">
             <h1>NEWCASTLE</h1>
             </div>
@@ -69,7 +72,7 @@
         </div>
 
     </div>
-
+    </div>
 
 </section>
 <!---------------------------------------------------------------------------------Facilities-->
@@ -77,27 +80,67 @@
     <h1>Facilities</h1>
 </section>
 <!---------------------------------------------------------------------------------Location Maps-->
-<section>
+<section id="maps">
+<div class="container">
 <div class="row">
     <div class="col-md-6 text-pad"> 
-        <h1>GYM CITY - </h1><h2>LONDON</h2>
+        <h1>GYM CITY </h1><h2>LONDON</h2>
+        <h3>Here in our London GYM CITY we provide the following facilities and services!</h3>
+        <ul>
+            <li>10000 Square Meter Facility</li>
+            <li>Brand new 3g football pitch</li>
+            <li>Olymic size swimming pool</li>
+            <li>Spa</li>
+            <li>State of the art gym floor and equipment</li>
+            <li>Smart machines to analyze your perfomance</li>
+            <li>Various classes</li>
+            <li>Our very own cafe offering healthy, protein rich snaks and meals</li>
+        </ul>
     </div>
     <div class="col-md-6 map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
     </div>
     <div class="col-md-6 text-pad"> 
-        <h1>GYM CITY - </h1><h2>NEWCASTLE</h2>
+        <h1>GYM CITY </h1><h2>NEWCASTLE</h2>
+        <h3>Here in our Newcastle GYM CITY we provide the following facilities and services!</h3>
+        <ul>
+            <li>7000 Square Meter Facility</li>
+            <li>Olymic size swimming pool</li>
+            <li>Outdoor 11 a-side football pitch</li>
+            <li>Spa</li>
+            <li>State of the art gym floor and equipment</li>
+            <li>Smart machines to analyze your perfomance</li>
+            <li>Various classes</li>
+            <li>Our very own cafe offering healthy, protein rich snaks and meals</li>
+        </ul>
     </div>
+        
     <div class="col-md-6 map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
 </div>
     <div class="col-md-6 text-pad"> 
-            <h1>GYM CITY - </h1><h2>MANCHESTER</h2>
+            <h1>GYM CITY </h1><h2>MANCHESTER</h2>
+            <h3>Here in our Manchester GYM CITY we provide the following facilities and services!</h3>
+        <ul>
+            <li>7000 Square Meter Facility</li>
+            <li>Olymic size swimming pool</li>
+            <li>Spa</li>
+            <li>State of the art gym floor and equipment</li>
+            <li>Smart machines to analyze your perfomance</li>
+            <li>Weightlifting and Body Building performing stage</li>
+            <li>Various classes</li>
+            <li>Our very own cafe offering healthy, protein rich snaks and meals</li>
+        </ul>
         </div>
         <div class="col-md-6 map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
         </div>
     </div>
+    </div>
+
+</section>
+<!---------------------------------------------------------------------------------Image Carousel-->
+<section>
 
 </section>
 <!---------------------------------------------------------------------------------Footer + Socials-->
