Added maps and descriptions to location page

--- a/sign-up.html
+++ b/sign-up.html
@@ -45,7 +45,10 @@
 </header>
 <!---------------------------------------------------------------------------------Form-->
 <section>
-    Sign Up form
+    <section id="signup-section">
+    <div class="signup"></div>
+      
+
     
 </section>
 <!---------------------------------------------------------------------------------Other-->
