--- a/locations.html
+++ b/locations.html
@@ -77,7 +77,6 @@
 </section>
 <!---------------------------------------------------------------------------------Facilities-->
 <section>
-    <h1>Facilities</h1>
 </section>
 <!---------------------------------------------------------------------------------Location Maps-->
 <section id="maps">
@@ -87,20 +86,22 @@
         <h1>GYM CITY </h1><h2>LONDON</h2>
         <h3>Here in our London GYM CITY we provide the following facilities and services!</h3>
         <ul>
-            <li>10000 Square Meter Facility</li>
+            <li>10'000 Square Meter Facility</li>
             <li>Brand new 3g football pitch</li>
             <li>Olymic size swimming pool</li>
             <li>Spa</li>
             <li>State of the art gym floor and equipment</li>
             <li>Smart machines to analyze your perfomance</li>
             <li>Various classes</li>
-            <li>Our very own cafe offering healthy, protein rich snaks and meals</li>
+            <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
         </ul>
     </div>
     <div class="col-md-6 map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
     </div>
-    <div class="col-md-6 text-pad"> 
+    <img src="assets/images/londongym.jpg" class="gympics" alt="">
+
+        <div class="col-md-6 text-pad"> 
         <h1>GYM CITY </h1><h2>NEWCASTLE</h2>
         <h3>Here in our Newcastle GYM CITY we provide the following facilities and services!</h3>
         <ul>
@@ -111,13 +112,14 @@
             <li>State of the art gym floor and equipment</li>
             <li>Smart machines to analyze your perfomance</li>
             <li>Various classes</li>
-            <li>Our very own cafe offering healthy, protein rich snaks and meals</li>
+            <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
         </ul>
     </div>
         
     <div class="col-md-6 map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
 </div>
+<img src="assets/images/newcastlegym.jpg" class="gympics" alt="">
     <div class="col-md-6 text-pad"> 
             <h1>GYM CITY </h1><h2>MANCHESTER</h2>
             <h3>Here in our Manchester GYM CITY we provide the following facilities and services!</h3>
@@ -129,19 +131,28 @@
             <li>Smart machines to analyze your perfomance</li>
             <li>Weightlifting and Body Building performing stage</li>
             <li>Various classes</li>
-            <li>Our very own cafe offering healthy, protein rich snaks and meals</li>
+            <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
         </ul>
         </div>
         <div class="col-md-6 map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
         </div>
+        <img src="assets/images/manchestergym.jpg" class="gympics" alt="">
     </div>
     </div>
 
 </section>
-<!---------------------------------------------------------------------------------Image Carousel-->
+<!---------------------------------------------------------------------------------Description-->
 <section>
-
+<div class="ourgyms">
+    <h1>Our Gyms</h1>
+    <p>
+    All of our Gyms have been designed from the ground up to give you the best experience possible from different work out zones, whether you want to workout alone and not be disturbed in a private room or hit the weights with your mates, clanging the metal as loud as you want. We provide you with the best facilities compared to our competitiors at an amazing price point, by joining our gym, we can help change your life together, build you a workout plan, meal plan and the motivation you need to achieve your goals.
+    </p>
+    </div>
+    <div class="joinbtn">
+    <a href="sign-up.html"><button type="button" class="btn btn-info btn-lg">JOIN</button></a>
+    </div>
 </section>
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
