--- a/sign-up.html
+++ b/sign-up.html
@@ -45,11 +45,42 @@
 </header>
 <!---------------------------------------------------------------------------------Form-->
 <section>
-    <section id="signup-section">
-    <div class="signup"></div>
-      
-
-    
+    <div class="row">
+        <div class="col-md-12">
+                <div class="sign-up-pic"></div>
+                <div class="signup-cover">
+                <h1>Sign Up</h1>
+                <form>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">First Name</label>
+                            <input type="text" class="form-control" id="fname" placeholder="First Name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Second Name</label>
+                            <input type="text" class="form-control" id="sname" placeholder="Second Name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Password</label>
+                            <input type="password" class="form-control" id="pword" placeholder="Password" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1">Example select</label>
+                            <select class="form-control" id="exampleFormControlSelect1" required>
+                            <option>Select Membership</option>
+                            <option>Premium</option>
+                            <option>Standard</option>
+                            <option>Student</option>
+                            </select>
+                        </div>
+                        <input type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+    </div>
 </section>
 <!---------------------------------------------------------------------------------Other-->
 <section>
