Added media queries to locations page

--- a/locations.html
+++ b/locations.html
@@ -46,34 +46,26 @@
 </header>
 <!---------------------------------------------------------------------------------Locations-->
 <section id="loc-section">
-    <div class="conatiner">
     <div class="row no-gutters">
         <div class="col-md-4">
-
             <div class="newcastle"></div>
-
             <div class="loc-cover">
             <h1>NEWCASTLE</h1>
             </div>
         </div>
-
         <div class="col-md-4">
             <div class="london"></div>
             <div class="loc-cover">
             <h1>LONDON</h1>
             </div>
         </div>
-
         <div class="col-md-4">
             <div class="manchester"></div>
             <div class="loc-cover">
             <h1>MANCHESTER</h1>
             </div>
         </div>
-
     </div>
-    </div>
-
 </section>
 <!---------------------------------------------------------------------------------Facilities-->
 <section>
@@ -141,7 +133,8 @@
     </div>
     </div>
 
-</section>
+<!---------------------------------------------------------------------------------Mobile-->
+
 <!---------------------------------------------------------------------------------Description-->
 <section>
 <div class="ourgyms">
