--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
 </header>
 <!---------------------------------------------------------------------------------Welcome with pic-->
 <section id="hero-section">
+<div class="row">
+<div class="col-md-12">
     <div class="hero"></div>
       <div id="cover">
       <h2>Welcome To</h2>
       <h1>GYM CITY</h1>
       <h3>DARE TO BE GREAT</h3>
       </div>
+</div>
+</div>
 
 
 
@@ -79,7 +83,7 @@
                 <div class="card text-center">
                     <img src="assets/images/ptw.jpg" class="card img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Emily James</h5>
+                        <h5 class="card-title">Emily James <i class="fas fa-user"></i></h5>
                         <p class="card-text"> "Hey there! I run the Manchester GYM CITY, I've been in the business for 10 years now and counting! You can always find me on the gym floor leading classes and helping our members achieve their fitness goals. See you there!'"</p>
                     </div>
                 </div>
@@ -88,7 +92,7 @@
                 <div class="card text-center">
                     <img src="assets/images/pt.jpg" class="card img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Mark Hughes</h5>
+                        <h5 class="card-title">Mark Hughes <i class="fas fa-user"></i></h5>
                         <p class="card-text"> "Hey! I'm Mark, manager and pt at our London GYM CITY, I specialise in cardio workouts and as an ex professional 800m runner, I know all there is about HIIT training and getting your running time down!"</p>
                     </div>
                 </div>
@@ -97,7 +101,7 @@
                 <div class="card text-center">
                     <img src="assets/images/pt2.jpg" class="card img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Alberto Manuel</h5>
+                        <h5 class="card-title">Alberto Manuel <i class="fas fa-user"></i></h5>
                         <p class="card-text"> "Hola! I help to lead the Newcastle Gym City, We have an amazing environment here where everyone feels comfortable to workout, after years of learning and training I specify in packing on the muscle so if you need any tips and tricks come find me in Newcastle!"</p>
                     </div>
                 </div>
@@ -118,14 +122,14 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <h4 class="card-title">STANDARD</h4>
+                                    <h4 class="card-title">STANDARD <i class="fas fa-id-card"></i></h4>
                                 </div>
                             </div>
                         </div>
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">FEATURES</h4>
+                                    <h4 class="card-title">FEATURES <i class="fas fa-star"></i></h4>
                                     <ul class="card-text">
                                         <li>24/7 access</li>
                                         <li>Use up to 2 of our facilities</li>
@@ -145,14 +149,14 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <h4 class="card-title">PREMIUM</h4>
+                                    <h4 class="card-title">PREMIUM <i class="fas fa-id-card"></i></h4>
                                 </div>
                             </div>
                         </div>
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">FEATURES</h4>
+                                    <h4 class="card-title">FEATURES <i class="fas fa-star"></i></h4>
                                     <ul class="card-text">
                                         <li>24/7 access</li>
                                         <li>Use any of our facilities</li>
@@ -173,14 +177,14 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <h4 class="card-title">STUDENT</h4>
+                                    <h4 class="card-title">STUDENT <i class="fas fa-id-card"></i></h4>
                                 </div>
                             </div>
                         </div>
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">FEATURES</h4>
+                                    <h4 class="card-title">FEATURES <i class="fas fa-star"></i></h4>
                                     <ul class="card-text">
                                         <li>Off-Peak access</li>
                                         <li>Use one of our facilities</li>
