--- a/sign-up.html
+++ b/sign-up.html
@@ -83,8 +83,8 @@
     </div>
 </section>
 <!---------------------------------------------------------------------------------Other-->
-<section>
-    Other enquiries
+<section id="enquiries">
+    <h1>Any other enquiries please contact us at: <a href = "mailto: gymcity@outlook.com">gymcity@outlook.com</a></h1>
 </section>
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
