Added gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -44,14 +44,31 @@
 </nav>
 </header>
 <!---------------------------------------------------------------------------------Locations-->
-<section>
-    Locations
-    
+<section id="gallery">
+<div class="row no-gutters">
+  <div class="column">
+    <img src="assets/images/modern1.jpg">
+    <img src="assets/images/Student.jpg">
+    <img src="assets/images/Standard.jpg">
+  </div>
+  <div class="column">
+    <img src="assets/images/Premium.jpg">
+    <img src="assets/images/newcastlegym.jpg">
+    <img src="assets/images/modern2.jpg">
+  </div>
+  <div class="column">
+    <img src="assets/images/manchestergym.jpg">
+    <img src="assets/images/londongym.jpg">
+    <img src="assets/images/gympics1.jpg">
+  </div>
+  <div class="column">
+    <img src="assets/images/gympics2.jpg">
+    <img src="assets/images/gympics3.jpg">
+    <img src="assets/images/gympics4.jpg">
+  </div>
+</div>
 </section>
-<!---------------------------------------------------------------------------------Facilities-->
-<section>
-    Facilities
-</section>
+
 <!---------------------------------------------------------------------------------Footer + Socials-->
 <footer>
     <ul class="social-networks">
