--- a/locations.html
+++ b/locations.html
@@ -74,7 +74,7 @@
 <section id="maps">
 <div class="container">
 <div class="row">
-    <div class="col-md-6 text-pad"> 
+    <div class="col-md text-pad"> 
         <h1>GYM CITY </h1><h2>LONDON</h2>
         <h3>Here in our London GYM CITY we provide the following facilities and services!</h3>
         <ul>
@@ -88,12 +88,12 @@
             <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
         </ul>
     </div>
-    <div class="col-md-6 map-pad">
+    <div class="col-md map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=London&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
     </div>
     <img src="assets/images/londongym.jpg" class="gympics" alt="">
 
-        <div class="col-md-6 text-pad"> 
+        <div class="col-md text-pad"> 
         <h1>GYM CITY </h1><h2>NEWCASTLE</h2>
         <h3>Here in our Newcastle GYM CITY we provide the following facilities and services!</h3>
         <ul>
@@ -108,11 +108,11 @@
         </ul>
     </div>
         
-    <div class="col-md-6 map-pad">
+    <div class="col-md map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=newcastle&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
 </div>
 <img src="assets/images/newcastlegym.jpg" class="gympics" alt="">
-    <div class="col-md-6 text-pad"> 
+    <div class="col-md text-pad"> 
             <h1>GYM CITY </h1><h2>MANCHESTER</h2>
             <h3>Here in our Manchester GYM CITY we provide the following facilities and services!</h3>
         <ul>
@@ -126,7 +126,7 @@
             <li>Our very own cafe offering healthy, protein rich snacks and meals</li>
         </ul>
         </div>
-        <div class="col-md-6 map-pad">
+        <div class="col-md map-pad">
         <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=manchester&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/nordvpn-coupon/"></a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div>
         </div>
         <img src="assets/images/manchestergym.jpg" class="gympics" alt="">
