Added scrolling liks

--- a/locations.html
+++ b/locations.html
@@ -50,19 +50,19 @@
         <div class="col-md-4">
             <div class="newcastle"></div>
             <div class="loc-cover">
-            <h1>NEWCASTLE</h1>
+            <a href="#newcastle-scroll"><h1>NEWCASTLE</h1></a>
             </div>
         </div>
         <div class="col-md-4">
             <div class="london"></div>
             <div class="loc-cover">
-            <h1>LONDON</h1>
+            <a href="#london-scroll"><h1>LONDON</h1></a>
             </div>
         </div>
         <div class="col-md-4">
             <div class="manchester"></div>
             <div class="loc-cover">
-            <h1>MANCHESTER</h1>
+            <a href="#manchester-scroll"><h1>MANCHESTER</h1></a>
             </div>
         </div>
     </div>
@@ -71,8 +71,10 @@
 <section id="maps">
 <div class="container">
 <div class="row">
-    <div class="col-md text-pad"> 
+    <div class="col-md text-pad">
+    <div id="london-scroll">
         <h1>GYM CITY </h1><h2>LONDON</h2>
+        </div> 
         <h3>Here in our London GYM CITY we provide the following facilities and services!</h3>
         <ul>
             <li>10'000 Square Meter Facility</li>
@@ -90,8 +92,10 @@
     </div>
     <img src="assets/images/londongym.jpg" class="gympics" alt="">
 
-        <div class="col-md text-pad"> 
+        <div class="col-md text-pad "> 
+        <div id="newcastle-scroll">
         <h1>GYM CITY </h1><h2>NEWCASTLE</h2>
+        </div>
         <h3>Here in our Newcastle GYM CITY we provide the following facilities and services!</h3>
         <ul>
             <li>7000 Square Meter Facility</li>
@@ -110,7 +114,9 @@
 </div>
 <img src="assets/images/newcastlegym.jpg" class="gympics" alt="">
     <div class="col-md text-pad"> 
+        <div id="manchester-scroll">
             <h1>GYM CITY </h1><h2>MANCHESTER</h2>
+            </div>
             <h3>Here in our Manchester GYM CITY we provide the following facilities and services!</h3>
         <ul>
             <li>7000 Square Meter Facility</li>
